DynamicTreeFeature now samples biome from noise
This should prevent issue with server getting stuck preloading chunks